--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [8.1, 8.2, 8.3, 8.4]
-        laravel: [10.*, 11.*, 12.*]
+        php: [8.3, 8.4]
+        laravel: [11.*, 12.*]
       
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
     
@@ -23,7 +23,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
-        extensions: lua
+        extensions: luasandbox
       
     - name: Install Dependencies
       run: composer install --prefer-dist --no-interaction
