--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [8.3, 8.4]
-        laravel: [11.*, 12.*]
+        php: [8.4]
+        laravel: [12.*]
       
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
     
