--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,11 +27,12 @@ jobs:
     - name: Install Lua dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y lua5.3 liblua5.3-dev
+        sudo apt-get install -y lua5.1 liblua5.1-dev pkg-config
       
     - name: Install luasandbox extension
       run: |
-        yes '' | sudo pecl install luasandbox
+        export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:$PKG_CONFIG_PATH
+        yes '' | sudo -E pecl install luasandbox
         INI_PATH=$(php --ini | grep "Scan for additional .ini files" | sed -e "s|.*:\s*||")
         if [ -d "$INI_PATH" ]; then
           echo "extension=luasandbox.so" | sudo tee "$INI_PATH/luasandbox.ini"
